fix: added z-index into unread-count

--- a/src/components/Widget/components/Launcher/style.scss
+++ b/src/components/Widget/components/Launcher/style.scss
@@ -48,6 +48,7 @@
     top: 0;
     right: 0;
     font-weight: 700;
+    z-index: 1;
   }
 
   .push-tooltip-body {
